blend_check.txt
    Checking astraweave-blend v0.1.0 (C:\Users\pv2br\AstraWeave-AI-Native-Gaming-Engine\crates\astraweave-blend)
warning: unused import: `ConversionProgress`
  --> crates\astraweave-blend\src\conversion.rs:11:42
   |
11 | use crate::progress::{CancellationToken, ConversionProgress, ConversionStage, ProgressTracker};
   |                                          ^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by default

warning: unused import: `error`
  --> crates\astraweave-blend\src\conversion.rs:22:22
   |
22 | use tracing::{debug, error, info, warn};
   |                      ^^^^^

warning: unused import: `ConversionJobBuilder`
 --> crates\astraweave-blend\src\importer.rs:7:40
  |
7 | use crate::conversion::{ConversionJob, ConversionJobBuilder, ConversionResult};
  |                                        ^^^^^^^^^^^^^^^^^^^^

warning: unused import: `debug`
  --> crates\astraweave-blend\src\importer.rs:16:15
   |
16 | use tracing::{debug, info, warn};
   |               ^^^^^

warning: unused import: `OutputFormat`
 --> crates\astraweave-blend\src\export_script.rs:8:35
  |
8 |     MaterialOptions, MeshOptions, OutputFormat, TextureOptions,
  |                                   ^^^^^^^^^^^^

warning: unused variable: `result`
   --> crates\astraweave-blend\src\conversion.rs:213:13
    |
213 |         let result = self.run_blender(&script_path).await?;
    |             ^^^^^^ help: if this is intentional, prefix it with an underscore: `_result`
    |
    = note: `#[warn(unused_variables)]` on by default

error[E0308]: `?` operator has incompatible types
   --> crates\astraweave-blend\src\discovery.rs:234:58
    |
234 |           let _result: BlendResult<&BlenderInstallation> = tokio::runtime::Handle::try_current()
    |  __________________________________________________________^
235 | |             .map(|h| h.block_on(self.discover()))
236 | |             .or_else(|_| {
237 | |                 let rt = tokio::runtime::Runtime::new().map_err(|e| BlendError::IoError(e))?;
238 | |                 Ok::<_, BlendError>(rt.block_on(self.discover()))
239 | |             })??;
    | |________________^ expected `Result<&BlenderInstallation, BlendError>`, found `&BlenderInstallation`
    |
    = note: `?` operator cannot convert from `&BlenderInstallation` to `Result<&BlenderInstallation, BlendError>`
    = note:   expected enum `Result<&BlenderInstallation, BlendError>`
            found reference `&BlenderInstallation`
help: try wrapping the expression in `Ok`
    |
234 ~         let _result: BlendResult<&BlenderInstallation> = Ok(tokio::runtime::Handle::try_current()
235 |             .map(|h| h.block_on(self.discover()))
...
238 |                 Ok::<_, BlendError>(rt.block_on(self.discover()))
239 ~             })??);
    |

For more information about this error, try `rustc --explain E0308`.
warning: `astraweave-blend` (lib) generated 6 warnings
error: could not compile `astraweave-blend` (lib) due to 1 previous error; 6 warnings emitted
